Update test build.

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,18 +13,18 @@ src_dir = robus/
 test_dir = extra/examples/tests
 
 [common]
-build_flags = -I./robus -I./robus/inc  -I./extra/examples/tests/inc
-src_filter = +<src/*>, +<../extra/examples/tests>, +<../extra/examples/tests/src>
+build_flags = -I./robus -I./robus/inc
+src_filter = +<src/*>
 
 [env:btatmega328]
 platform = atmelavr
 board = btatmega328
 framework = arduino
 upload_speed = 115200
-build_flags = ${common.build_flags} -I./robus/hal/stub
-src_filter = ${common.src_filter}, +<hal/stub>
+build_flags = ${common.build_flags} -I./robus/hal/atmega328
+src_filter = ${common.src_filter}, +<hal/atmega328>, +<../extra/examples/dev_test>
 
 [env:native]
 platform = native
-build_flags = ${common.build_flags} -I./robus/hal/stub
-src_filter = ${common.src_filter}, +<hal/stub>
+build_flags = ${common.build_flags} -I./robus/hal/stub -I./extra/examples/tests/inc
+src_filter = ${common.src_filter}, +<hal/stub>, +<../extra/examples/tests>, +<../extra/examples/tests/src>
