Implements the mockup hal using a zmq broker.

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,5 +26,5 @@ src_filter = ${common.src_filter}, +<hal/atmega328>, +<../extra/examples/dev_tes
 
 [env:native]
 platform = native
-build_flags = ${common.build_flags} -I./robus/hal/stub -I./extra/examples/tests/inc
-src_filter = ${common.src_filter}, +<hal/stub>, +<../extra/examples/tests>, +<../extra/examples/tests/src>
+build_flags = ${common.build_flags} -I./robus/hal/mockup -lzmq
+src_filter = ${common.src_filter}, +<hal/mockup>, +<../extra/examples/mockup>
