Separate Robus as a lib.

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,22 +9,20 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [platformio]
-src_dir = robus/
-test_dir = extra/examples/tests
+src_dir = extra
 
 [common]
-build_flags = -I./robus -I./robus/inc
-src_filter = +<src/*>
+build_flags = 
 
 [env:btatmega328]
 platform = atmelavr
 board = btatmega328
 framework = arduino
 upload_speed = 115200
-build_flags = ${common.build_flags} -I./robus/hal/atmega328
-src_filter = ${common.src_filter}, +<hal/atmega328>, +<../extra/examples/dev_test>
+build_flags = ${common.build_flags} -DHAL=atmega328
+src_filter = +<examples/dev_test>
 
 [env:native]
 platform = native
-build_flags = ${common.build_flags} -I./robus/hal/mockup -lzmq
-src_filter = ${common.src_filter}, +<hal/mockup>, +<../extra/examples/mockup>
+build_flags = ${common.build_flags} -DHAL=mockup -lzmq
+src_filter = +<examples/mockup>
