--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 src_dir = extra
 
 [common]
-build_flags = 
+build_flags =
 
 [env:btatmega328]
 platform = atmelavr
@@ -26,3 +26,8 @@ src_filter = +<examples/dev_test>
 platform = native
 build_flags = ${common.build_flags} -DHAL=mockup -lzmq
 src_filter = +<examples/mockup>
+
+[env:unit_test]
+platform = native
+build_flags = ${common.build_flags} -DHAL=stub -Iexamples/tests/src
+src_filter = +<examples/tests>
