Add ESP wifi hal.

--- a/platformio.ini
+++ b/platformio.ini
@@ -26,3 +26,12 @@ src_filter = +<examples/dev_test>
 platform = native
 build_flags = ${common.build_flags} -DHAL=mockup -lzmq
 src_filter = +<examples/mockup>
+
+[env:esp12e-wifi]
+platform = espressif8266
+board = esp12e
+framework = arduino
+upload_speed = 921600
+build_flags = ${common.build_flags} -DHAL=esp12e -DESP_USE_WIFI
+src_filter = +<examples/esp12e/test_wifi.cpp>
+lib_deps = ESP8266WiFi
