Add the mockup implementation of topology detection.

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,7 +25,7 @@ src_filter = +<examples/dev_test>
 [env:native]
 platform = native
 build_flags = ${common.build_flags} -DHAL=mockup -lzmq
-src_filter = +<examples/mockup>
+src_filter = +<examples/mockup/test_topology.cpp>
 
 [env:unit_test]
 platform = native
