Force 0 optimisation at compilation for ATMEGA328

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ platform = atmelavr
 board = btatmega328
 framework = arduino
 upload_speed = 115200
-build_flags = ${common.build_flags} -DHAL=atmega328
+build_flags = ${common.build_flags} -DHAL=atmega328 -O0
 src_filter = +<examples/dev_test>
 
 [env:native]
