Fix mockup broker and add a topology detection example.

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,3 +40,8 @@ upload_speed = 921600
 build_flags = ${common.build_flags} -DHAL=esp12e -DESP_USE_WIFI
 src_filter = +<examples/esp12e/test_wifi.cpp>
 lib_deps = ESP8266WiFi
+
+[env:mockup_detection]
+platform = native
+build_flags = ${common.build_flags} -DHAL=mockup -lzmq
+src_filter = +<examples/mockup/detection/module.cpp>
