Implement first version of the json gate on the ESP.
Do not gather real data yet, so fake data.

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,9 +37,9 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 upload_speed = 921600
-build_flags = ${common.build_flags} -DHAL=esp12e -DESP_USE_WIFI
-src_filter = +<examples/esp12e/test_wifi.cpp>
-lib_deps = ESP8266WiFi
+build_flags = ${common.build_flags} -DHAL=esp12e -DDEBUG
+src_filter = +<examples/esp12e/json_pub.cpp>
+lib_deps = ESP8266WiFi, WebSockets
 
 [env:mockup_detection]
 platform = native
