--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,7 @@ platform = atmelavr
 board = btatmega328
 framework = arduino
 upload_speed = 115200
-build_flags = ${common.build_flags} -DHAL=atmega328 -O0
+build_flags = ${common.build_flags} -DHAL=atmega328 -O0 -DMAX_VM_NUMBER=1 -DMSG_BUFFER_SIZE=2
 src_filter = +<examples/dev_test>
 
 [env:native]
