Add arduino pro config

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,13 @@ src_dir = extra
 [common]
 build_flags =
 
+[env:barduinopro]
+platform = atmelavr
+board = pro16MHzatmega328
+framework = arduino
+build_flags = ${common.build_flags} -DHAL=atmega328 -O0 -DMAX_VM_NUMBER=1 -DMSG_BUFFER_SIZE=2
+src_filter = +<examples/dev_test>
+
 [env:btatmega328]
 platform = atmelavr
 board = btatmega328
