ESP hal transmit ok

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [platformio]
 src_dir = extra
+env_default = esp12e
 
 [common]
 build_flags =
@@ -38,6 +39,15 @@ src_filter = +<examples/mockup/test_topology.cpp>
 platform = native
 build_flags = ${common.build_flags} -DHAL=stub -Iexamples/tests/testlib
 src_filter = +<examples/tests>
+
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
+upload_speed = 921600
+build_flags = ${common.build_flags} -DHAL=esp12e
+src_filter = +<examples/ESP_dev_test/dev_test.cpp>
+lib_deps = ESP8266WiFi
 
 [env:esp12e-wifi]
 platform = espressif8266
