--- a/platformio.ini
+++ b/platformio.ini
@@ -45,7 +45,7 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 upload_speed = 921600
-build_flags = ${common.build_flags} -DHAL=esp12e
+build_flags = ${common.build_flags} -DHAL=esp12e -O1
 src_filter = +<examples/ESP_dev_test/dev_test.cpp>
 lib_deps = ESP8266WiFi
 
