--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [platformio]
 src_dir = extra
 env_default = esp12e
+; env_default = btatmega328
 
 [common]
 build_flags =
@@ -45,7 +46,7 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 upload_speed = 921600
-build_flags = ${common.build_flags} -DHAL=esp12e -O1
+build_flags = ${common.build_flags} -DHAL=esp12e -O1 -fpermissive
 src_filter = +<examples/ESP_dev_test/dev_test.cpp>
 lib_deps = ESP8266WiFi
 
