Add Hal for teensy.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,14 @@ env_default = esp12e
 [common]
 build_flags =
 
+[env:module_teensy]
+platform = teensy
+board = teensy31
+framework = arduino
+build_flags = ${common.build_flags} -DHAL=teensy  -fpermissive
+src_filter = +<examples/modules/led.cpp>
+lib_deps = TimerOne
+
 [env:barduinopro]
 platform = atmelavr
 board = pro16MHzatmega328
