switch from stub test to phisical ones

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,11 @@
 src_dir = extra
 env_default = esp12e
 ; env_default = btatmega328
+; ************** tests **************
+; env_default = unit_test_gate
+; env_default = unit_test_mod1
+; env_default = unit_test_mod2
+; env_default = unit_test_mod3
 
 [common]
 build_flags =
@@ -44,10 +49,35 @@ platform = native
 build_flags = ${common.build_flags} -DHAL=mockup -lzmq
 src_filter = +<examples/mockup/test_topology.cpp>
 
-[env:unit_test]
-platform = native
-build_flags = ${common.build_flags} -DHAL=stub -Iexamples/tests/testlib
-src_filter = +<examples/tests>
+[env:unit_test_gate]
+platform = teensy
+board = teensy31
+build_flags = ${common.build_flags} -DHAL=teensy -O0 -fpermissive
+src_filter = +<examples/tests/gate.cpp> +<examples/tests/testlib/test_mngmnt.cpp>
+
+[env:unit_test_mod1]
+platform = atmelavr
+board = btatmega328
+framework = arduino
+upload_speed = 115200
+build_flags = ${common.build_flags} -DHAL=atmega328 -DMAX_VM_NUMBER=3 -DMSG_BUFFER_SIZE=2
+src_filter = +<examples/tests/mod1.cpp>
+
+[env:unit_test_mod2]
+platform = atmelavr
+board = btatmega328
+framework = arduino
+upload_speed = 115200
+build_flags = ${common.build_flags} -DHAL=atmega328 -DMAX_VM_NUMBER=3 -DMSG_BUFFER_SIZE=2
+src_filter = +<examples/tests/mod2.cpp>
+
+[env:unit_test_mod3]
+platform = atmelavr
+board = btatmega328
+framework = arduino
+upload_speed = 115200
+build_flags = ${common.build_flags} -DHAL=atmega328 -DMAX_VM_NUMBER=3 -DMSG_BUFFER_SIZE=2
+src_filter = +<examples/tests/mod3.cpp>
 
 [env:esp12e]
 platform = espressif8266
