move tests and populate template

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,8 +52,10 @@ src_filter = +<examples/mockup/test_topology.cpp>
 [env:unit_test_gate]
 platform = teensy
 board = teensy31
+framework = arduino
 build_flags = ${common.build_flags} -DHAL=teensy -O0 -fpermissive
-src_filter = +<examples/tests/gate.cpp> +<examples/tests/testlib/test_mngmnt.cpp>
+src_filter = +<tests/gate.cpp> +<tests/testlib>
+lib_deps = TimerOne
 
 [env:unit_test_mod1]
 platform = atmelavr
@@ -61,7 +63,7 @@ board = btatmega328
 framework = arduino
 upload_speed = 115200
 build_flags = ${common.build_flags} -DHAL=atmega328 -DMAX_VM_NUMBER=3 -DMSG_BUFFER_SIZE=2
-src_filter = +<examples/tests/mod1.cpp>
+src_filter = +<tests/mod1.cpp>
 
 [env:unit_test_mod2]
 platform = atmelavr
@@ -69,7 +71,7 @@ board = btatmega328
 framework = arduino
 upload_speed = 115200
 build_flags = ${common.build_flags} -DHAL=atmega328 -DMAX_VM_NUMBER=3 -DMSG_BUFFER_SIZE=2
-src_filter = +<examples/tests/mod2.cpp>
+src_filter = +<tests/mod2.cpp>
 
 [env:unit_test_mod3]
 platform = atmelavr
@@ -77,7 +79,7 @@ board = btatmega328
 framework = arduino
 upload_speed = 115200
 build_flags = ${common.build_flags} -DHAL=atmega328 -DMAX_VM_NUMBER=3 -DMSG_BUFFER_SIZE=2
-src_filter = +<examples/tests/mod3.cpp>
+src_filter = +<tests/mod3.cpp>
 
 [env:esp12e]
 platform = espressif8266
